# acme-client-openbsd-portable

./: Makefile.am  README  acctproc.c  b64_ntop.c  b64_ntop.h  base64.c  bsd-asprintf.c  bsd-setres_id.c  bsd-string.h  bsd-strings.h  bsd-sys-pledge.h  bsd-sys-queue.h  bsd-unistd.h  certproc.c  chngproc.c  configure.ac  dbg.c  dnsproc.c  explicit_bzero.c  extern.h  fileproc.c  http.c  jsmn.c  jsmn.h  json.c  key.c  keyproc.c  libressl-tls.h  main.c  netproc.c  parse.h  parse.y  pledge.c  pledge.h  reallocarray.c  recallocarray.c  revokeproc.c  rsa.c  strlcat.c  strlcpy.c  (+6 more)
compat/: bsd-resolv.h  bsd-stdarg.h  bsd-stdlib.h  bsd-unistd.h  pledge.c  setprogname.c
doc/: LICENSE
m4/: act_check_program.m4  act_search_libs.m4  args.m4  funcs.m4  libs.m4
patches/: asprintf-includes.patch  base64-unsigned.patch  directories.patch  dirname.patch  dnsproc-includes.patch  extern-decls.patch  extern-includes.patch  openssl-no-config.patch  openssl11.patch  parse-unsigned.patch  pledge-param-intercept.patch  recallocarray-explicit_bzero.patch  setcomp.patch  setcompname.patch
scripts/: update.sh
